objects/OrderItem/fields/Boomi_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Boomi_End_Date__c</fullName>
    <label>Boomi End Date</label>
    <type>Date</type>
</CustomField>