objects/OrderItem/fields/Boomi_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Boomi_Start_Date__c</fullName>
    <label>Boomi Start Date</label>
    <type>Date</type>
</CustomField>