objects/OrderItem/fields/CaseSafeProductId__c.field-meta.xml
<CustomField>
    <fullName>CaseSafeProductId__c</fullName>
    <description>Used by SNOW to aggregate order lines.</description>
    <formula>CASESAFEID( Product2Id )</formula>
    <label>CaseSafeProductId</label>
    <type>Text</type>
</CustomField>