objects/OrderItem/fields/Custom_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Custom_Unit_Price__c</fullName>
    <formula>ROUND(( Allocation__c *   SBQQ__BundleRoot__r.SBQQ__QuoteLine__r.SBQQ__NetTotal__c  ) /  Quantity, 5 )</formula>
    <label>Custom Unit Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>