objects/OrderItem/fields/Distribution_Involvement_Discount__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Involvement_Discount__c</fullName>
    <description>This field is populated by the Distribution Involvement Discount field on the related Quote Line.</description>
    <inlineHelpText>Discount if quote is going through Distributor.</inlineHelpText>
    <label>Distribution Involvement Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>