objects/OrderItem/fields/ELV_AllocationQuantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_AllocationQuantity__c</fullName>
    <label>Allocation Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>