objects/OrderItem/fields/ELV_ARR_Amount_Prorate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>ELV_ARR_Amount_Prorate_Multiplier__c</fullName>
    <label>ARR Amount (Prorate Multiplier)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>