objects/OrderItem/fields/ELV_BookingsIndicator__c.field-meta.xml
<CustomField>
    <fullName>ELV_BookingsIndicator__c</fullName>
    <label>Bookings Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
            </value>
            <value>
                <fullName>Do Not Include</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>