objects/OrderItem/fields/ELV_Contracted_Renewal_Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>ELV_Contracted_Renewal_Uplift_Percent__c</fullName>
    <description>TNCI-135 / ELV-CPQ-068. Ordered contractual renewal uplift cap snapshot; zero is valid.</description>
    <label>Contracted Renewal Uplift Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>