objects/OrderItem/fields/ELV_Day_1_ARR_Formula__c.field-meta.xml
<CustomField>
    <fullName>ELV_Day_1_ARR_Formula__c</fullName>
    <label>Day 1 ARR Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>