objects/OrderItem/fields/ELV_DistributorDiscount__c.field-meta.xml
<CustomField>
    <fullName>ELV_DistributorDiscount__c</fullName>
    <description>The Distributordiscount percentage that is applied to the order product.</description>
    <label>Distributor Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>