objects/OrderItem/fields/ELV_DistributorDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>ELV_DistributorDiscountAmount__c</fullName>
    <description>The Distributordiscount amount that is applied to the order product.</description>
    <label>Distributor Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>