objects/OrderItem/fields/ELV_Exclude_from_ARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_Exclude_from_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TNCI-139 / ELV-CPQ-036. Twinned from QuoteLineItem.ELV_Exclude_from_ARR__c. Nue copies the value from the quote line onto the order product because the names match and the field is in the Fields Expose to Nue field set.</description>
    <label>Exclude from ARR</label>
    <type>Checkbox</type>
</CustomField>