objects/OrderItem/fields/ELV_HuntIQ_ARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_HuntIQ_ARR__c</fullName>
    <label>HuntIQ ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>