objects/OrderItem/fields/ELV_Migrated_Record__c.field-meta.xml
<CustomField>
    <fullName>ELV_Migrated_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ELV Migrated Record</label>
    <type>Checkbox</type>
</CustomField>