objects/OrderItem/fields/ELV_MIgration_External_Id__c.field-meta.xml
<CustomField>
    <fullName>ELV_MIgration_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ELV MIgration External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>