objects/OrderItem/fields/ELV_NARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_NARR__c</fullName>
    <label>NARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>