objects/OrderItem/fields/ELV_NS_Ready__c.field-meta.xml
<CustomField>
    <fullName>ELV_NS_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TNCI-206 / ELV-DM-010. Plain writable checkbox indicating the order product is ready to hand off to NetSuite. Set by process or integration, not calculated.</description>
    <inlineHelpText>Check when this order product is ready for the NetSuite handoff.</inlineHelpText>
    <label>NS_Ready</label>
    <type>Checkbox</type>
</CustomField>