objects/OrderItem/fields/ELV_PartnerDiscount__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerDiscount__c</fullName>
    <description>The Partner discount percentage that is applied to the order product.</description>
    <label>Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>