objects/OrderItem/fields/ELV_PoT_Software__c.field-meta.xml
<CustomField>
    <fullName>ELV_PoT_Software__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Percent of Total Software</label>
    <type>Checkbox</type>
</CustomField>