objects/OrderItem/fields/ELV_ProrateMultiplier__c.field-meta.xml
<CustomField>
    <fullName>ELV_ProrateMultiplier__c</fullName>
    <description>TNCI-139 / ELV-CPQ-036. Twinned from QuoteLineItem.ELV_ProrateMultiplier__c, the month-based proration ratio matching CPQ SBQQ__ProrateMultiplier__c.</description>
    <label>Prorate Multiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>