objects/OrderItem/fields/ELV_RenewalUpliftPercent__c.field-meta.xml
<CustomField>
    <fullName>ELV_RenewalUpliftPercent__c</fullName>
    <description>TNCI-135 ordered snapshot of the custom applied renewal uplift rate.</description>
    <label>Renewal Uplift Percent</label>
    <precision>12</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>