objects/OrderItem/fields/ELV_UsageQuantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_UsageQuantity__c</fullName>
    <description>Captures the Usage hours, Credit, AI Asks etc. imcluded with the Subscription and or overage line.</description>
    <label>Usage Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>