objects/OrderItem/fields/End_User_Account__c.field-meta.xml
<CustomField>
    <fullName>End_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TwinField from QuoteLine.</description>
    <label>End User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products (End User Account)</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>