objects/OrderItem/fields/Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Total__c</fullName>
    <formula>IF (  AND(  SBQQ__QuoteLine__r.SBQQ__Bundle__c, SBQQ__QuoteLine__r.SBQQ__Quote__r.SBQQ__PriceBook__r.Name == &apos;Global Pricebook&apos;), 0,
SBQQ__QuoteLine__r.SBQQ__NetTotal__c)

/*SBQQ__QuoteLine__r.SBQQ__NetTotal__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>