objects/OrderItem/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <label>NetSuite ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>