objects/OrderItem/fields/NS_Pricebook_Level__c.field-meta.xml
<CustomField>
    <fullName>NS_Pricebook_Level__c</fullName>
    <description>TwinField: Source Quote Line.  Used by NS for Rev Rec.</description>
    <label>NS Pricebook Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>