objects/OrderItem/fields/Nue_OrderItem_Migration_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Nue_OrderItem_Migration_External_Id__c</fullName>
    <description>Migration record external id to identify source record</description>
    <externalId>true</externalId>
    <inlineHelpText>Migration record external id to identify source record</inlineHelpText>
    <label>Nue OrderItem Migration External Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>