objects/OrderItem/fields/PartnerDiscount__c.field-meta.xml
<CustomField>
    <fullName>PartnerDiscount__c</fullName>
    <label>Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>