objects/OrderItem/fields/POC_Term__c.field-meta.xml
<CustomField>
    <fullName>POC_Term__c</fullName>
    <formula>(YEAR(  EndDate ) - YEAR(  ServiceDate  ))*12 - MONTH(ServiceDate) + MONTH(EndDate) + 
((DAY(EndDate) - DAY(ServiceDate) + 1) / 
CASE(MONTH(EndDate), 
4,30, 
6,30, 
9,30, 
11,30, 
2, IF(OR( MOD( YEAR(EndDate ), 400 ) = 0, AND( MOD( YEAR(EndDate), 4 ) = 0, MOD( YEAR( EndDate), 100 ) != 0 ) ),29,28), 
31) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>