objects/OrderItem/fields/Product_Promotion_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Promotion_Name__c</fullName>
    <label>Product Promotion Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>