objects/OrderItem/fields/Required_By_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Product_ID__c</fullName>
    <label>Required By Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>