objects/OrderItem/fields/Ruby__ActualSubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ActualSubscriptionTerm__c</fullName>
    <description>The subscription term measured by Month.  Default value is 1 for a One-Time product, and 12 for a recurring product.</description>
    <label>Actual Subscription Term</label>
    <precision>16</precision>
    <scale>11</scale>
    <type>Number</type>
</CustomField>