objects/OrderItem/fields/Ruby__BillCycleDay__c.field-meta.xml
<CustomField>
    <fullName>Ruby__BillCycleDay__c</fullName>
    <description>Bill Cycle Day</description>
    <inlineHelpText>Determines on which day the billing cycle starts.</inlineHelpText>
    <label>Bill Cycle Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__Bill_Cycle_Day</valueSetName>
    </valueSet>
</CustomField>