objects/OrderItem/fields/Ruby__BillCycleStartMonth__c.field-meta.xml
<CustomField>
    <fullName>Ruby__BillCycleStartMonth__c</fullName>
    <description>Bill Cycle Start Month</description>
    <inlineHelpText>Determines in which month of the period, the billing cycle starts for this account.</inlineHelpText>
    <label>Bill Cycle Start Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>