objects/OrderItem/fields/Ruby__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__BillingAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The billing account assigned to this order line. Inherited from the corresponding Quote Line Item during order creation.</description>
    <inlineHelpText>The billing account assigned to this order line.</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Order Items</relationshipLabel>
    <relationshipName>BillingOrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>