objects/OrderItem/fields/Ruby__BillingTiming__c.field-meta.xml
<CustomField>
    <fullName>Ruby__BillingTiming__c</fullName>
    <description>Determines whether customers are billed for the products or services before or after they are provided or consumed</description>
    <inlineHelpText>Determines whether customers are billed for the products or services before or after they are provided or consumed</inlineHelpText>
    <label>Billing Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__BillingTiming</valueSetName>
    </valueSet>
</CustomField>