objects/OrderItem/fields/Ruby__CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__CancellationDate__c</fullName>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>