objects/OrderItem/fields/Ruby__CarvesEligible__c.field-meta.xml
<CustomField>
    <fullName>Ruby__CarvesEligible__c</fullName>
    <formula>IF(ISBLANK(Product2.Ruby__OriginalProduct__c), Product2.Ruby__CarvesEligible__c, Product2.Ruby__OriginalProduct__r.Ruby__CarvesEligible__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carves Eligible</label>
    <type>Checkbox</type>
</CustomField>