objects/OrderItem/fields/Ruby__ChangeAssetId__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ChangeAssetId__c</fullName>
    <label>Change Asset Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>