objects/OrderItem/fields/Ruby__ChangeAssetNumber__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ChangeAssetNumber__c</fullName>
    <description>The Change Asset Name</description>
    <formula>TRIM(LEFT(Ruby__ChangeAssetId__c , FIND(&quot;_&quot;, Ruby__ChangeAssetId__c)-1))</formula>
    <inlineHelpText>The Change Asset Name</inlineHelpText>
    <label>Change Asset Number</label>
    <type>Text</type>
</CustomField>