objects/OrderItem/fields/Ruby__ChangeAssetType__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ChangeAssetType__c</fullName>
    <label>Change Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__AssetType</valueSetName>
    </valueSet>
</CustomField>