objects/OrderItem/fields/Ruby__ChangeProductReferenceItem__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ChangeProductReferenceItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The order item this product change item is associated with</description>
    <label>Change Product Reference Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Change Product Reference Item</relationshipLabel>
    <relationshipName>ChangeProductReferenceItem</relationshipName>
    <type>Lookup</type>
</CustomField>