objects/OrderItem/fields/Ruby__ChangeReferenceOrderItem__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ChangeReferenceOrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The order item this change item refers to</description>
    <label>Change Reference Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products (Change Reference Item)</relationshipLabel>
    <relationshipName>ChangedOrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>