objects/OrderItem/fields/Ruby__ChangeType__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ChangeType__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renew</fullName>
                <label>Renew Subscription</label>
            </value>
            <value>
                <fullName>NewProduct</fullName>
                <label>New Product</label>
            </value>
            <value>
                <fullName>UpdateQuantity</fullName>
                <label>Update Quantity</label>
            </value>
            <value>
                <fullName>UpdateTerm</fullName>
                <label>Update Term</label>
            </value>
            <value>
                <fullName>UpdateTermForEvergreen</fullName>
                <label>Update term for Evergreen</label>
            </value>
            <value>
                <fullName>CoTerm</fullName>
                <label>Co-term</label>
            </value>
            <value>
                <fullName>CoTermForEvergreen</fullName>
                <label>Co-term for Evergreen</label>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
            <value>
                <fullName>Reconfigure</fullName>
            </value>
            <value>
                <fullName>AdjustPrice</fullName>
                <label>Adjust Price</label>
            </value>
            <value>
                <fullName>DeleteMilestone</fullName>
                <label>Delete Milestone</label>
            </value>
            <value>
                <fullName>NewMilestone</fullName>
                <label>New Milestone</label>
            </value>
            <value>
                <fullName>ConvertFreeTrial</fullName>
                <label>Convert Free Trial</label>
            </value>
            <value>
                <fullName>RenewWithQuantityUpdate</fullName>
                <label>Renew With Quantity Update</label>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Swap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>