objects/OrderItem/fields/Ruby__ContractLiabilitySegment__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ContractLiabilitySegment__c</fullName>
    <description>Contract Liability Segment for revenue recognition</description>
    <label>Contract Liability Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>