objects/OrderItem/fields/Ruby__ContractRevenueSegment__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ContractRevenueSegment__c</fullName>
    <description>Contract Revenue Segment for revenue recognition</description>
    <label>Contract Revenue Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>