objects/OrderItem/fields/Ruby__Credit_Pool__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Credit_Pool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Credit Pool this order line routes to. Carried forward from the Quote Line Item; sent to Nue as-is at activation.</description>
    <inlineHelpText>Credit Pool this line routes to. Carried from the quote line.</inlineHelpText>
    <label>Credit Pool</label>
    <referenceTo>Ruby__CreditPool__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>