objects/OrderItem/fields/Ruby__CustomerName__c.field-meta.xml
<CustomField>
    <fullName>Ruby__CustomerName__c</fullName>
    <description>Customer Name</description>
    <formula>Order.Account.Name</formula>
    <inlineHelpText>The name of the customer</inlineHelpText>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>