objects/OrderItem/fields/Ruby__DefaultRenewalTerm__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DefaultRenewalTerm__c</fullName>
    <description>Renewal Term determines how long the subscription generated from the order product is going to be renewed.  The value defaults from the Default Renewal Term of the product or service.</description>
    <inlineHelpText>Renewal Term determines how long the subscription generated from the order product is going to be renewed.  The value defaults from the Default Renewal Term of the product or service.</inlineHelpText>
    <label>Renewal Term</label>
    <precision>16</precision>
    <scale>11</scale>
    <type>Number</type>
</CustomField>