objects/OrderItem/fields/Ruby__DeltaACV__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DeltaACV__c</fullName>
    <label>Delta ACV</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>