objects/OrderItem/fields/Ruby__DeltaARR__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DeltaARR__c</fullName>
    <description>Annual Recurring Revenue</description>
    <label>Delta ARR</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>