objects/OrderItem/fields/Ruby__DeltaCommittedARR__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DeltaCommittedARR__c</fullName>
    <description>Committed Annual Recurring Revenue</description>
    <label>Delta Committed ARR</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>