objects/OrderItem/fields/Ruby__DeltaCommittedCMRR__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DeltaCommittedCMRR__c</fullName>
    <description>Committed Contractual Monthly Recurring Revenue, effective in between Subscription Start Date and Subscription End Date for this Order Product.</description>
    <label>Delta Committed CMRR</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>