objects/OrderItem/fields/Ruby__DeltaTCV__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DeltaTCV__c</fullName>
    <label>Delta TCV</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>