objects/OrderItem/fields/Ruby__DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DiscountAmount__c</fullName>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>