objects/OrderItem/fields/Ruby__EvergreenEndDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__EvergreenEndDate__c</fullName>
    <description>Date when the evergreen subscription is changed to termed subscription</description>
    <label>Evergreen End Date</label>
    <type>Date</type>
</CustomField>