objects/OrderItem/fields/Ruby__EvergreenStartDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__EvergreenStartDate__c</fullName>
    <description>Date when the termed subscription is changed to evergreen subscription</description>
    <label>Evergreen Start Date</label>
    <type>Date</type>
</CustomField>