objects/OrderItem/fields/Ruby__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Id for order product</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>