objects/OrderItem/fields/Ruby__IncludedUnits__c.field-meta.xml
<CustomField>
    <fullName>Ruby__IncludedUnits__c</fullName>
    <label>Included Units</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>