objects/OrderItem/fields/Ruby__ListPrice__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ListPrice__c</fullName>
    <description>Ruby&apos;s updatable list price</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>