objects/OrderItem/fields/Ruby__ListTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ListTotalPrice__c</fullName>
    <label>List Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>