objects/OrderItem/fields/Ruby__NueId__c.field-meta.xml
<CustomField>
    <fullName>Ruby__NueId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Nue ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>