objects/OrderItem/fields/Ruby__PartnerPayoutPercentage__c.field-meta.xml
<CustomField>
    <fullName>Ruby__PartnerPayoutPercentage__c</fullName>
    <description>Partner margin or Partner Discount percentage at Line Level. Applied to Total Price. User-entered or tag-based.</description>
    <inlineHelpText>Partner margin or Partner Discount percentage at Line Level. Applied to Total Price.</inlineHelpText>
    <label>Partner Discount %</label>
    <precision>12</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>