objects/OrderItem/fields/Ruby__PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>Ruby__PaymentTerm__c</fullName>
    <description>Order product payment term</description>
    <inlineHelpText>Payment term used for this item</inlineHelpText>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__PaymentTerms</valueSetName>
    </valueSet>
</CustomField>