objects/OrderItem/fields/Ruby__ProductName__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ProductName__c</fullName>
    <formula>IF( OR(ISNULL( Ruby__ProductOption__c ), ISBLANK(Ruby__ProductOption__c), Ruby__ProductOption__r.Ruby__IsDynamic__c == TRUE) , PricebookEntry.Product2.Name, BLANKVALUE(Ruby__ProductOption__r.Ruby__OptionName__c, PricebookEntry.Product2.Name) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>