objects/OrderItem/fields/Ruby__ProductOption__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ProductOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Option</label>
    <referenceTo>Ruby__ProductOption__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>