objects/OrderItem/fields/Ruby__ProductOptionQuantity__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ProductOptionQuantity__c</fullName>
    <description>The selected quantity of the product option</description>
    <inlineHelpText>The selected quantity of the product option</inlineHelpText>
    <label>Product Option Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>