objects/OrderItem/fields/Ruby__ProductRelationship__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ProductRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product relationship that creates this change order item</description>
    <label>Product Relationship</label>
    <referenceTo>Ruby__ProductRelationship__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>OrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>