objects/OrderItem/fields/Ruby__ProductSKU__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ProductSKU__c</fullName>
    <description>The product SKU</description>
    <formula>Product2.StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The product SKU</inlineHelpText>
    <label>Product SKU</label>
    <type>Text</type>
</CustomField>