objects/OrderItem/fields/Ruby__ProratedQuantity__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ProratedQuantity__c</fullName>
    <label>Prorated Credits</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>