objects/OrderItem/fields/Ruby__RenewalUpliftPercent__c.field-meta.xml
<CustomField>
    <fullName>Ruby__RenewalUpliftPercent__c</fullName>
    <description>The uplift (in percentage) to be applied upon renewal.</description>
    <label>Renewal Uplift Percent</label>
    <precision>12</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>