objects/OrderItem/fields/Ruby__RevenueContractId__c.field-meta.xml
<CustomField>
    <fullName>Ruby__RevenueContractId__c</fullName>
    <description>Revenue contract id for optional revenue contract grouping</description>
    <label>Revenue Contract Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>