objects/OrderItem/fields/Ruby__SalesPrice__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SalesPrice__c</fullName>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>