objects/OrderItem/fields/Ruby__ShippingAndHandling__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ShippingAndHandling__c</fullName>
    <label>Shipping and Handling</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>